update wings certs volume

--- a/linux.env
+++ b/linux.env
@@ -14,7 +14,7 @@ wings_etc=/etc/pterodactyl/
 wings_lib=/var/lib/pterodactyl/
 wings_log=/var/log/pterodactyl/
 wings_tmp=/tmp/pterodactyl/
-wings_certs=/etc/ssl/certs:/etc/ssl/certs
+wings_certs=/etc/ssl/certs
 # you may need /srv/daemon-data if you are upgrading from an old daemon
 #wings_daemon-data=/srv/daemon-data/:/srv/daemon-data/
 # Required for ssl if you use let's encrypt. uncomment to use.
