--- a/windows.env
+++ b/windows.env
@@ -14,7 +14,7 @@ wings_etc=E:\docker\docker_volume\etc\pterodactyl\
 wings_lib=E:\docker\docker_volume\var\lib\pterodactyl\
 wings_log=E:\docker\docker_volume\var\log\pterodactyl\
 wings_tmp=E:\docker\docker_volume\tmp\pterodactyl\
-wings_certs=E:\docker\docker_volume\etc\ssl\certs:\etc\ssl\certs
+wings_certs=E:\docker\docker_volume\etc\ssl\certs
 # you may need \srv\daemon-data if you are upgrading from an old daemon
 #wings_daemon-data=\srv\daemon-data\:\srv\daemon-data\
 # Required for ssl if you use let's encrypt. uncomment to use.
