--- a/pterodactyl-wings-docker-compose.yml
+++ b/pterodactyl-wings-docker-compose.yml
@@ -16,13 +16,13 @@ services:
       WINGS_GID: 988
       WINGS_USERNAME: pterodactyl
     volumes:
-      - ${wings_docker}:/var/run/docker.sock
-      - ${wings_containers}:/var/lib/docker/containers/
-      - ${wings_etc}:/etc/pterodactyl/
-      - ${wings_lib}:/var/lib/pterodactyl/
-      - ${wings_log}:/var/log/pterodactyl/
-      - ${wings_tmp}:/tmp/pterodactyl/
-      - ${wings_certs}:/etc/ssl/certs:ro
+      - "${wings_docker}:/var/run/docker.sock"
+      - "${wings_containers}:/var/lib/docker/containers/"
+      - "${wings_etc}:/etc/pterodactyl/"
+      - "${wings_lib}:/var/lib/pterodactyl/"
+      - "${wings_log}:/var/log/pterodactyl/"
+      - "${wings_tmp}:/tmp/pterodactyl/"
+      - "${wings_certs}:/etc/ssl/certs:ro"
       # you may need /srv/daemon-data if you are upgrading from an old daemon
       #- /srv/daemon-data/:/srv/daemon-data/
       # Required for ssl if you use let's encrypt. uncomment to use.
