add puffer panel

--- a/windows.env
+++ b/windows.env
@@ -1,19 +1,27 @@
-# Volume paths
-DATABASE_VOLUME_PATH=/srv/pterodactyl/database
-PANEL_VAR_VOLUME_PATH=/srv/pterodactyl/var/
-NGINX_CONF_VOLUME_PATH=/srv/pterodactyl/nginx/
-SSL_CERTS_VOLUME_PATH=/srv/pterodactyl/certs/
-LOGS_VOLUME_PATH=/srv/pterodactyl/logs/
+# Pterodactyl panel
+# Volumes
+DATABASE_VOLUME_PATH=E:\docker\docker_volume\pterodactyl\srv\pterodactyl\database
+PANEL_VAR_VOLUME_PATH=E:\docker\docker_volume\pterodactyl\srv\pterodactyl\var\
+NGINX_CONF_VOLUME_PATH=E:\docker\docker_volume\pterodactyl\srv\pterodactyl\nginx\
+SSL_CERTS_VOLUME_PATH=E:\docker\docker_volume\pterodactyl\srv\pterodactyl\certs\
+LOGS_VOLUME_PATH=E:\docker\docker_volume\pterodactyl\srv\pterodactyl\logs\
 
-
-wings_docker=C:\docker\docker_volume\var\run\docker.sock
-wings_containers=C:\docker\docker_volume\var\lib\docker\containers\
-wings_etc=C:\docker\docker_volume\etc\pterodactyl\
-wings_lib=C:\docker\docker_volume\var\lib\pterodactyl\
-wings_log=C:\docker\docker_volume\var\log\pterodactyl\
-wings_tmp=C:\docker\docker_volume\tmp\pterodactyl\
-wings_certs=C:\docker\docker_volume\etc\ssl\certs
+# Pterodactyl wings
+# Volumes
+wings_docker=E:\docker\docker_volume\var\run\docker.sock
+wings_containers=E:\docker\docker_volume\var\lib\docker\containers\
+wings_etc=E:\docker\docker_volume\etc\pterodactyl\
+wings_lib=E:\docker\docker_volume\var\lib\pterodactyl\
+wings_log=E:\docker\docker_volume\var\log\pterodactyl\
+wings_tmp=E:\docker\docker_volume\tmp\pterodactyl\
+wings_certs=E:\docker\docker_volume\etc\ssl\certs
 # you may need \srv\daemon-data if you are upgrading from an old daemon
 #wings_daemon-data=\srv\daemon-data\:\srv\daemon-data\
 # Required for ssl if you use let's encrypt. uncomment to use.
 #wings_letsencrypt=\etc\letsencrypt\:\etc\letsencrypt\
+
+# Puffer Panel
+# Volumes
+CONFIG_VOLUME=E:\docker\docker_volume\pufferpanel\pufferpanel-config
+LIB_VOLUME=E:\docker\docker_volume\pufferpanel\var\lib\pufferpanel
+DOCKER_SOCK=E:\docker\docker_volume\pufferpanel\var\run\docker.sock
